syntax = "proto3";
package main;

import "google/protobuf/timestamp.proto";

option go_package = "serialization/protobuf";

message DataJSON{
	int32 id = 1;
	google.protobuf.Timestamp client_timestamp = 2;
	google.protobuf.Timestamp server_timestamp = 3;
	string payload = 4;
}